cancel last update

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body class="body">
     <main class="main">
-      <h1 class="header">Разрешите ли вы вашей дочке стать моей рабыней?</h1>
+      <h1 class="header">Will you be my slave, puppy?</h1>
       <div class="buttons">
         <button class="button button--yes">Yes</button>
         <button class="button button--no">No</button>
@@ -45,7 +45,9 @@
         alt="я милая картинка, *чмок*"
         class="picture"
       />
-      <p class="text">Спасибо за доверие, обещаю вам 4 прекрасных внука ❤️</p>
+      <p class="text">
+        Quickly put on the collar and run to the cage, my sweety ❤️
+      </p>
     </main>
     <script src="./js/main.min.js"></script>
   </body>
