create version for mom of your slave

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body class="body">
     <main class="main">
-      <h1 class="header">Will you be my slave, puppy?</h1>
+      <h1 class="header">Разрешите ли вы вашей дочке стать моей рабыней?</h1>
       <div class="buttons">
         <button class="button button--yes">Yes</button>
         <button class="button button--no">No</button>
@@ -46,7 +46,7 @@
         class="picture"
       />
       <p class="text">
-        Quickly put on the collar and run to the cage, my sweety ❤️
+        Спасибо за ваше доверие, обещаю вам 4 прекрасных внука ❤️
       </p>
     </main>
     <script src="./js/main.min.js"></script>
