translate buttons in russian

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <main class="main">
       <h1 class="header">Разрешите ли вы вашей дочке стать моей рабыней?</h1>
       <div class="buttons">
-        <button class="button button--yes">Yes</button>
-        <button class="button button--no">No</button>
+        <button class="button button--yes">Да</button>
+        <button class="button button--no">Нет</button>
       </div>
       <img
         src="./img/toChoose.gif"
